# sqlite_blaster_python

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  kv_idx.db  pyproject.toml  setup.py  student_marks  student_marks.db  test_sqib.py
.github/workflows/: codacy.yml  conda.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: Makefile  cmake_example.rst  conf.py  index.rst  make.bat
src/: main.cpp
tests/: test_basic.py  test_sqib.py
